TERP proj/force-app/main/default/objects/Contact/fields/Internal_Lead_Owner__c.field-meta.xml
<CustomField>
    <fullName>Internal_Lead_Owner__c</fullName>
    <label>Internal Lead Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>