TERP proj/force-app/main/default/objects/Contact/fields/Type_Of_Customer__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Customer__c</fullName>
    <description>Select type of customer</description>
    <label>Type Of Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Customer</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>App Exchange</fullName>
            </value>
            <value>
                <fullName>Referrals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>